--- a/restore_kbd_backlight.service
+++ b/restore_kbd_backlight.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Restore Keyboard Backlight
-After=suspend.target sleep.target hibernate.target hybrid-sleep.target
+After=suspend.target
 
 [Service]
 Type=oneshot
@@ -8,4 +8,4 @@ ExecStart=cp /sys/class/leds/asus::kbd_backlight/brightness /etc/keyboard/bright
 ExecStop=cp /etc/keyboard/brightness /sys/class/leds/asus::kbd_backlight/brightness
 
 [Install]
-WantedBy=suspend.target sleep.target hibernate.target hybrid-sleep.target
+WantedBy=suspend.target
